# 120Proof

./: .gitignore  .gitmodules  120.cfg  ExtractModep  HydrogenProject.md  Initialise  InitialiseMidi  InitialiseModHost  InitialisePd  InitialiseYos  Mistress  ModhostSimulators  README.md  SetupInstrument  TODO.md  delete_jack_midi_connections  fun.pl  lpx_colour_demo
Documents/: MIDI 1.0 Control Change Messages.html  MIDInotes.txt
Instruments/: README.md  SynthDefinitions.txt
Instruments/Axel/: Initialise  lpx_manager.cfg  midi.cfg
Instruments/Beatrice/: Initialise  lpx_manager.cfg  midi.cfg
Instruments/DrumPad01/: samples.json
Instruments/Drums/: midi.cfg
Instruments/GhostWalking/: Initialise  Initialise.sh  lpx_manager.cfg  midi.cfg
Instruments/Maddie/: Initialise
Instruments/SharkLips/: Initialise  Initialise.sh  TearDown.sh  lpx_manager.cfg  midi.cfg  systemd.sh
Instruments/Song01/: Initialise  drum_pattern_02.json  (+3 more)
Loops/: Loops.aup3  Loops.aup3-wal
Pd/: polysynth.pd
Pedal/: Makefile  driver.rs
Perl/: One20Proof.pm  test.pl
lv2_ctl/: Cargo.toml  README.md  rustfmt.toml
lv2_ctl/src/: app.rs  dialogue.rs  lv2.rs  lv2_simulator.rs  lv2_stateful_list.rs  main.rs  mod_host_controller.rs  port.rs  port_table.rs  run_executable.rs
monitor/: Cargo.toml
novation_lpx/: Cargo.toml
pd_patches/: 120Proof.pd  ButtonDemo.pd  playnote.pd  polyharp.pd  polysynth.pd
pedal/: Makefile  driver.c
rust_tools/: Cargo.toml
subs/: Daemon.pm  OFF-CTL.19  OFF-CTL.29  OFF-CTL.39  OFF-CTL.59  OFF.49  ON-CTL.19  ON-CTL.29  ON-CTL.39  ON-CTL.49  ON-CTL.59
(+140 files in other folders)
