[package]
name = "lv2_ctl"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6"
crossterm = "0.27"
ncurses = "5.101"
ratatui = {path = "/home/puppy/ratatui", features=["serde"]}
regex = "1.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui-input = "0.8.0"


## These are useful for profiling.  If I can find a sensible profiler.
## `flamegraph` has not been easy to understand
# [build]
# rustflags = ["-g", "-pg"]
# [profile.release]
# debug = true
